# claw-and-order

./: CLAUDE.md  HOW_IT_WORKS.md  README.md  SESSION_DATA.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  session.rs  terminal.rs
src-tauri/tests/fixtures/: busy_after_tool_result.jsonl  busy_after_user.jsonl  idle_after_assistant.jsonl  idle_pending_tool_use.jsonl  session_completed.jsonl
