[package]
name = "claw-and-order"
version = "0.1.0"
description = "Claw & Order — local Claude Code session viewer"
authors = ["you"]
edition = "2021"

[lib]
name = "claw_and_order_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
notify-debouncer-mini = "0.4"
notify = "6"
sysinfo = "0.33"
